fixed forms stretching outside of divs

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -40,7 +40,7 @@ h1 {
   justify-content: center;
   align-items: center;
   background-color: rgb(68, 170, 165);
-  margin: 20px 620px;
+  margin: 50px 1rem;
   padding: 50px;
   /* box-shadow: 10px 5px 4px rgb(148, 142, 142); */
   border-radius: 10px;
@@ -361,7 +361,7 @@ option {
 .pokedex{
   position:absolute;
   top:10px;
-  right: 10px;
+  right: 0px;
   margin-top: 80px;
 }
 
